# fortune-agent

./: .gitignore  DEPLOY.md  README.md  build_bazi_cases.py  build_bazi_cases_final.py  build_bazi_cases_final2.py  build_bazi_cases_part2.py  build_bazi_cases_part3.py  build_bazi_cases_part4.py  build_bazi_cases_part5.py  build_bazi_cases_part6.py  build_bazi_cases_part7.py  build_bazi_cases_part8.py  build_bazi_cases_part9.py  build_social_qa.py  deploy.sh  dream_scraper.py  gen_fengshui_p1.py  gen_fengshui_p2.py  gen_fengshui_p3.py  gen_fengshui_p4.py  gen_fengshui_p5.py  generate_81shuli.py  generate_all.py  generate_all_v2.py  generate_bazi.py  generate_cases.py  generate_massive.py  generate_ziwei_bulk.py  home_entries_p2.json  home_entries_p3.json  home_entries_p4.json  index_dreams.py  merge_fengshui.py  office_entries_p5.json  pyproject.toml  scrape_12880.py  scrape_dreams.py  scrape_zgjm_02516.py  scrape_zgjmorg.py  (+1 more)
config/: books.json  settings.yaml
cow-config/: config.json
data/: celebrity_cases.json
docs/: ACCEPTANCE_CRITERIA.md  ACCEPTANCE_CRITERIA_AI_NATIVE.md  ACCEPTANCE_CRITERIA_CALENDAR.md  ACCEPTANCE_CRITERIA_CONFIDANT.md  ACCEPTANCE_CRITERIA_CROSS_VALIDATION.md  ACCEPTANCE_CRITERIA_DASHBOARD_ML.md  ACCEPTANCE_CRITERIA_FACE_READING.md  ACCEPTANCE_CRITERIA_FEEDBACK.md  ACCEPTANCE_CRITERIA_MINI_PROGRAM.md  ACCEPTANCE_CRITERIA_ROUND2.md  ACCEPTANCE_CRITERIA_SIMULATION.md  ACCEPTANCE_CRITERIA_TOP_TIER.md  API.md  COMPETITOR_ANALYSIS.md  DESIGN_SYSTEM.md  v3.1_AI_NATIVE.md
miniprogram/: app.js  app.json
scripts/: add_dream_dictionary.py  batch_rag.py  (+28 more)
(+88 files in other folders)
