[project]
name = "fortune-agent"
version = "0.1.0"
description = "算命风水AI代理"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.30.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]
